--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.4.3",
-    "element-ui": "^2.13.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "element-ui": "^2.12.0",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "@vue/cli-plugin-babel": "^3.0.0-rc.9",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.9",
+    "@vue/cli-service": "^3.0.0-rc.9",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.16.5"
   },
   "eslintConfig": {
     "root": true,
@@ -31,13 +32,32 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "arrow-parens": 0,
+      "generator-star-spacing": 0,
+      "no-debugger": 0,
+      "no-console": 0,
+      "space-before-function-paren": [
+        "error",
+        {
+          "anonymous": "ignore",
+          "named": "ignore"
+        }
+      ],
+      "no-unused-vars": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
   },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not ie <= 8"
   ]
 }
