--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "element-ui": "^2.12.0",
-    "vue": "^2.5.16",
+    "lottie-web": "^5.6.8",
+    "vue": "^2.6.11",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
