--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "element-ui": "^2.12.0",
+    "jquery": "^3.5.1",
     "lottie-web": "^5.6.8",
     "vue": "^2.6.11",
     "vue-router": "^3.0.1"
