--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "element-ui": "^2.12.0",
+    "github-markdown-css": "^4.0.0",
+    "highlight.js": "^10.1.1",
     "jquery": "^3.5.1",
     "lottie-web": "^5.6.8",
     "vue": "^2.6.11",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -23,6 +26,7 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
+    "text-loader": "0.0.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.16.5"
   },
