--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lottie-web": "^5.6.8",
     "vue": "^2.6.11",
     "vue-markdown": "^2.2.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.9",
