--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "element-ui": "^2.12.0",
     "github-markdown-css": "^4.0.0",
+    "gojs": "^2.1.33",
     "highlight.js": "^10.1.1",
     "jquery": "^3.5.1",
     "lottie-web": "^5.6.8",
