--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "du-utils": "^1.0.0",
     "element-ui": "^2.12.0",
     "github-markdown-css": "^4.0.0",
     "gojs": "^2.1.33",
