--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ckeditor4-vue": "^1.3.0",
     "du-utils": "^1.0.0",
     "echarts": "^5.0.2",
     "element-ui": "^2.12.0",
