--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "f2elint-scan": "f2elint scan",
-    "f2elint-fix": "f2elint fix"
+    "fix": "eslint --fix --ext .js,.vue src/"
   },
   "dependencies": {
     "ckeditor4-vue": "^1.3.0",
-    "du-utils": "^1.0.0",
     "echarts": "^5.0.2",
     "element-ui": "^2.12.0",
     "github-markdown-css": "^4.0.0",
@@ -19,24 +17,27 @@
     "highlight.js": "^10.1.1",
     "jquery": "^3.5.1",
     "lottie-web": "^5.6.8",
+    "node-sass": "^6.0.0",
+    "sass-loader": "10",
     "vue": "^2.6.11",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "webpack": "4.16.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.9",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.9",
     "@vue/cli-service": "^3.0.0-rc.9",
-    "f2elint": "^1.1.2",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.19",
-    "node-sass": "^4.9.3",
-    "sass-loader": "^7.1.0",
     "text-loader": "0.0.1",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.16.5"
+    "vue-template-compiler": "^2.5.16"
   },
   "postcss": {
     "plugins": {
@@ -47,11 +48,5 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "f2elint commit-file-scan",
-      "commit-msg": "f2elint commit-msg-scan"
-    }
-  }
+  ]
 }
