--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lottie-web": "^5.6.8",
     "node-sass": "^6.0.0",
     "sass-loader": "10",
+    "screenfull": "^5.1.0",
     "vue": "^2.6.11",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
