--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "highlight.js": "^10.1.1",
     "jquery": "^3.5.1",
     "lottie-web": "^5.6.8",
+    "marked": "^3.0.2",
     "node-sass": "^6.0.0",
     "sass-loader": "10",
     "screenfull": "^5.1.0",
