--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fix": "eslint --fix --ext .js,.vue src/"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.2.4",
     "ckeditor4-vue": "^1.3.0",
     "echarts": "^5.0.2",
     "element-ui": "^2.12.0",
